[tool.poetry]
name = "scadi"
version = "0.1.4"
description = "SCAD Inliner: Roll up OpenSCAD includes into the main file for easy sharing."
keywords = ["openscad", "inline", "minimizer", "rollup", "scad"]
homepage = "https://nascentmaker.com/py/scadi"
repository = "https://github.com/NascentMaker/scadi"
authors = ["Nascent Maker <hello@nascentmaker.com>"]
maintainers = ["Nascent Maker <hello@nascentmaker.com>", "Torgny Bjers <torgny@bjers.org>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include =  "scadi" }
]
include = ["README.rst", "LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry.scripts]
scadi = "scadi.main:main"

[tool.poetry.plugins."cliff.scadi"]
inline = "scadi.inline:Inline"

[tool.poetry.dependencies]
python = "^3.8"
cliff = ">=3.10,<5.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
pytest = "^7.2.1"
tox = "^4.2.8"
coverage = "^7.0.5"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--import-mode=importlib",
    "-ra",
    "-q",
]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
fail-under = 10
jobs = 0
py-version = "3.8"

[tool.pylint.format]
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
max-line-length = 120
